src/posts/styling/submitPost.scss
#community-submit {
  display: flex;
  justify-content: center;
  background-color: var(--bg);
  min-height: 94dvh;
  padding: 1rem;

  .panel-wrap {
    width: clamp(50%, 900px, 95%);
    display: grid;
    grid: 1fr / 2fr 1fr;
    gap: 1.5rem;

    > div {
      height: min-content;
    }
  }

  ul.submit-form {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 0.5rem;

    li {
      list-style-type: none;

      input,
      textarea {
        width: 100%;
        font-size: 1rem;
        padding: 0.5rem 0.75rem;
        border: 1px solid var(--border);
        background-color: var(--panel);
        resize: none;
        border-radius: 4px;
      }
    }

    textarea {
      height: 8rem;
    }
  }

  div.image-drop-wrap {
    padding: 0.75rem;
    border-radius: 4px;
    height: min-content;

    > div {
      display: flex;
      flex-direction: row;
      gap: 0.5rem;
    }

    > p {
      color: var(--contrast);
      margin: 3rem auto;
      justify-self: center;
    }

    label {
      color: var(--accent);
    }

    input#image-drop {
      border: none;
      display: none;
    }

    div.loading-bar {
      width: 100%;
      height: 5px;
      margin: 5px;

      &.active {
        > div {
          animation: load 1.5s cubic-bezier(0.2, 1.04, 0.54, 0.92) forwards;
          background-color: var(--action);
          height: 2px;
          border-radius: 1px;
        }
      }
    }
  }

  .side-panel-wrap {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;

    div.rules-header {
      border-bottom: 1px solid var(--field);
      padding: 0.8rem;
      h3 {
        font-size: 1rem;
      }
    }

    ul.coralit-rules {
      li {
        list-style-type: none;
        border-bottom: 1px solid var(--field);
        padding: 0.6rem;
        font-weight: bold;
        font-size: 0.8rem;
      }
    }
  }
}

@keyframes load {
  from {
    width: 0;
  }
  to {
    width: 100%;
  }
}

